# kandidat

./: LICENSE  README.md
godot/: .gitignore  COPYRIGHT  Kandidat.sln  export_presets.cfg  godot.sln  icon.svg.import  main.tscn  planet.gd  planet.tscn  planet_data.gd  planet_icon_1.png.import  planet_noise.gd  planet_shader_material.tres  project.godot  rust.gdextension  rust.gdextension.uid
godot/Assets/: icon.svg.import  planet_shader_material.tres
godot/Scenes/: celestial_body.tscn  gravity_field.tscn  main.tscn  planet.tscn  star.tscn
godot/Scripts/: celestial_body.gd  gravity_field.gd  planet.gd  planet_data.gd  planet_mesh_face.gd  star.gd  star_mesh.gd
godot/Shaders/: planet_shader.gdshader
godot/src/: main.gd  main.gd.uid  main.tscn
godot/src/_main_menu/: game_settings.gd  game_settings.gd.uid  main.tscn  main_menu.gd  main_menu.gd.uid  main_menu.tscn
godot/src/benchmark/: Benchmark.cs  Benchmark.cs.uid  BenchmarkDataProcessor.cs  benchmark.tscn  instructions.txt
godot/src/demo/: demo.tscn
godot/src/marchingcubes/: IVerticesGenerationStrategy.cs  IVerticesGenerationStrategy.cs.uid  MarchingCube.cs  MarchingCube.cs.uid  MarchingTable.cs.uid  McChunkSpawner.cs  McChunkSpawner.cs.uid  McSpawner.cs  McSpawner.cs.uid  marchingcube.tscn  mc_chunks.tscn
godot/src/noise/: CelestialBodyNoise.cs  CelestialBodyNoise.cs.uid  DisplayNoise.cs  PlanetFactory.cs  PlanetNoise.cs  PlanetNoise.tscn  (+1 more)
resources/: .gitignore
resources/Skybox/: skybox.blend
rust_gdext/: Cargo.toml  license.html  out.txt
rust_gdext/benches/: gravity_bench.rs
rust_gdext/proc/: Cargo.toml
rust_gdext/proc/src/: lib.rs
rust_gdext/src/: lib.rs  worker.rs
rust_gdext/src/octree/: lod_octree.rs  mod.rs  morton.rs  morton_based.rs  parallel.rs  visualize.rs
rust_gdext/src/octree/old_versions/: insert_based.rs  mod.rs  partition_based.rs
rust_gdext/src/physics/: gravity.rs
rust_gdext/src/physics/gravity/: barnes_hut.rs  body.rs  controller.rs  direct_summation.rs  galaxy_controller.rs  mod.rs  trajectories.rs
text/rapport/: main.typ  rapport.typ  src.bib
(+421 files in other folders)
